<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.DiagnosticoActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:gravity="center"
        android:text="@string/diagnostico" />

    <EditText
        android:id="@+id/name_diag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/nombre_buscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buscar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_pacientes"
        android:layout_width="match_parent"
        android:layout_height="76dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="47dp" />

    <LinearLayout
        android:id="@+id/diag_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/res_diag"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:ems="10"
            android:hint="Diagnostico"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/causa_diag"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:ems="10"
            android:hint="Causas"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/med_diag"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:ems="10"
            android:hint="Medicamento/s"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/guardar_diag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guardar_diagnostico" />
    </LinearLayout>
</LinearLayout>

